Make background responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
         <link rel="stylesheet" href= "./css/index.css"/>
     </head>
+    <body>
         <script src="js/index.js"></script>
     </body>
 </html>
