add scene structure

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+        <script src="scenes/MainMenu.js"></script>
+        <script src="scenes/Introduction.js"></script>
+        <script src="js/index.js"></script>
         <link rel="stylesheet" href= "./css/index.css"/>
     </head>
     <body>
-        <script src="js/index.js"></script>
+        
     </body>
 </html>
