--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+        <script src="scenes/Port.js"></script>
         <script src="scenes/MainMenu.js"></script>
         <script src="scenes/Introduction.js"></script>
         <script src="js/index.js"></script>
