Change Map to WorldMap

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="scenes/Port.js"></script>
         <script src="scenes/MainMenu.js"></script>
         <script src="scenes/Introduction.js"></script>
-        <script src="scenes/Map.js"></script>
+        <script src="scenes/WorldMap.js"></script>
         <script src="js/index.js"></script>
         <link rel="stylesheet" href= "./css/index.css"/>
     </head>
