Add constants and current state

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
-        <script src="scenes/Port.js"></script>
-        <script src="scenes/MainMenu.js"></script>
-        <script src="scenes/Introduction.js"></script>
-        <script src="scenes/WorldMap.js"></script>
-        <script src="js/index.js"></script>
-        <link rel="stylesheet" href= "./css/index.css"/>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="data/constants.js"></script>
+    <script src="data/state.js"></script>
+    <script src="scenes/Port.js"></script>
+    <script src="scenes/MainMenu.js"></script>
+    <script src="scenes/Introduction.js"></script>
+    <script src="scenes/WorldMap.js"></script>
+    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body></body>
 </html>
