--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="scenes/MainMenu.js"></script>
     <script src="scenes/Introduction.js"></script>
     <script src="scenes/WorldMap.js"></script>
+    <script src="scenes/SeaEvent.js"></script>
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
