Add GameOver scene

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="scenes/Introduction.js"></script>
     <script src="scenes/WorldMap.js"></script>
     <script src="scenes/SeaEvent.js"></script>
+    <script src="scenes/GameOver.js"></script>
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
